# AI-video-app

./: .gitignore  README.md  app.py  main.py  pyproject.toml  trim.py
graph/nodes/: script_generator.py  video_finder_node.py
module/: script.py  video_finder.py
modules/: video_finder.py
utils/: __init__.py  db_config.py  models.py  prompt.py
